--- a/technovation/Fall2022/current.html
+++ b/technovation/Fall2022/current.html
@@ -220,6 +220,8 @@
                  <li><a href="VirtualLessons/week2lessonvirtual.pdf" target="_blank" download>Week 2</a></li>
                     
                 <li><a href="VirtualLessons/week3lessonvirtual.pdf" target="_blank" download>Week 3</a></li>
+
+                <li><a href="VirtualLessons/week4forloops.pdf" target="_blank" download>Week 4</a></li>
             </ul>
              
 
