--- a/technovation/Fall2022/news.html
+++ b/technovation/Fall2022/news.html
@@ -225,6 +225,207 @@
     </section> <!-- end Week n section //>
     -->
 
+    <section class="news bg-white">  <!-- begin Week 4 section -->
+        <div class="container">
+            <h2>Week 4</h2>
+            <h4>Again and again and again?</h4>
+            <p>
+                Ever feel like you're running in circles? Our students and mentors did at Saturday's lesson, but don't worry&mdash;those circles were all part of the plan! Saturday's lesson introduced <i>loops</i> for the <b>In-Person Cohort</b> and a review for <b>Virtual Cohorts</b>. Loops are a type of programming structure which tells a computer to repeat a set of instructions over, and over, and over, and over, ..., and over. As their name suggests, loops quite literally tell a computer to go in circles&mdash;we weren't spinning alone!
+            </p>
+            <p>
+                Before we dive into a full recap of our meeting, we've got a few key announcements to share.
+            </p>
+
+            <!------------------------------------------>
+
+            <h4 class="text-center">Announcements</h4>
+            <ul>
+                <h4>1. Bonus Hour</h4>
+                <p>
+                    We'll be continuing to host a Bonus Hour every Thursday from 7-8p ET, and invite all Technovation participants to join us. At least two Technovation mentors will be available on Zoom during the bonus hour to resolve technical difficulties, dive deeper into the coding concepts we've learned, or to talk about computer science in general! Join us at the link below:
+                </p>
+                <ul>
+                    <li style="list-style: disc">Bonus Hour Zoom: <a href=" https://msu.zoom.us/j/92645747814"> zoom</a> (password: see email)</li>
+                </ul>
+                <h4>2. Curriculum Check-In</h4>
+                <p>
+                    We've flown through the first four weeks of Technovation! To make sure everyone's feeling comfortable with the content we've covered so far, we'll be incorporating a review at this Saturday's lesson. If you missed a previous week's lesson or are feeling behind, hang in there and join us this Saturday. We'll make sure you're caught up before diving into anything new&mdash;no Technovator will be left behind!
+                </p>
+
+                <h4>3. Looking Ahead</h4>
+                <p>
+                    We'll see you again this Saturday, 10/22 at 10:30a ET for our fourth Technovation meeting of the fall! Zoom links will be the same as those used last week&mdash;we will send them out again on Saturday morning if you've lost them. Looking further ahead, we'll be meeting every Saturday through 11/19 at 10:30a ET.
+                </p>
+                <h4>4. Questions?</h4>
+                <p>
+                    As always, please reach out with any questions / concerns / ideas / feedback to <a href="mailto:info@spartangwc.org">info@spartangwc.org</a>.
+                </p>
+            </ul>
+
+            <!------------------------------------------>
+
+            <h4 class="text-center">Meeting Recap</h4>
+            <p>
+                <b>In-Person Cohort</b>> opened this week's meeting with a classic, icebreaker: discovering commonalities! Students courageously engaged in conversation and got to know their fellow peers.
+            </p>
+            <p>
+               <b>Virtual Cohorts</b> opened this week's meeting with a spotlight video on gaming! It was so neat to see how fascinated the students were by learning about the gaming industry and computer science!
+            </p>
+            <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                <div class="row">
+                    <div class="col-md-12" align="middle">
+                        <iframe width="728" height="548" src="https://www.youtube.com/embed/watch?v=sgbRUB0pt4c&t=1s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <p><i>Computer Science degree: My career in the gaming industry</i></p>
+                </div>
+            </div>
+            <p>
+                Following a brief review of what was covered in Weeks 1-3&mdash;including user-input, we dove into for-loops. 
+            </p>
+            <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                <div class="row">
+                    <div class="col-md-6" align="middle">
+                        <img class="shadow-lg" src="assets/img/week4/week404.png" width=90%>
+                    </div>
+                    <div class="col-md-6" align="middle">
+                        <img class="shadow-lg" src="assets/img/week4/week403.png" width=90%>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <p><i>Going in circles isn't always a bad thing... that's exactly what loops are designed to do!</i></p>
+                </div>
+            </div>
+            <p>
+                After introducing loops, we solidified our understanding of their use by working through coding challenges while remembering to utilize past concepts. 
+            </p>
+            <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                <div class="row">
+                    <div class="col-md-6" align="middle">
+                        <img class="shadow-lg" src="assets/img/week4/week402.png" width=90%>
+                    </div>
+                    <div class="col-md-6" align="middle">
+                        <img class="shadow-lg" src="assets/img/week4/week401.png" width=90%>
+                    </div>
+                </div><br>
+                <div class="row">
+                    <p><i>Loops help us clean up our code and make our program run more efficiently!</i></p>
+                </div>
+            </div>
+            <p>
+                Next Saturday, we'll be introducing variables, structures which allow us to store information in our program during runtime. If you're feeling behind, however, don't fret&mdash;we'll also dedicate a significant chunk of time to reviewing loops, functions, and the other key concepts we've covered in Weeks 1-4. The best way to become a better programmer is to program more&mdash;and that's exactly what we plan to do in Week 5!
+            </p>
+
+            <!------------------------------------------>
+
+            <h4 class="text-center">Mentor Spotlight</h4>
+            <p>
+                Technovation is led, organized, and run by MSU students under the guidance of faculty advisors from MSU and Ford&mdash;this week, we'd like to introduce our In-Person Cohort mentors!
+            </p>
+
+            <!------------------------------------------>
+
+            <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                <div class="row">
+                    <div class="col-md-4" align="middle"> <!-- Hadeel -->
+                        <img class="shadow-lg" src="assets/img/photos/HadeelRass750x1000_72R.jpeg" width=70%>
+                        <br><br>
+                        <p><i>Hadeel Rass (Detroit Mentor)</i></p>
+                    </div>
+                    <div class="col-md-4" align="middle"> <!-- Joao -->
+                        <img class="shadow-lg" src="assets/img/photos/joaoVitor750x1000_72R.jpeg" width=70%>
+                        <br><br>
+                        <p><i>Joao Vitor Oliveira Batista (Lansing Mentor)</i></p>
+                    </div>
+                    <div class="col-md-4" align="middle"> <!-- Jessika -->
+                        <img class="shadow-lg" src="assets/img/photos/JessikaHernandez750x1000.jpg" width=70%>
+                        <br><br>
+                        <p><i>Jessika Hernández (All Michigan Mentor)</i></p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4" align="left"> <!-- Hadeel -->
+                        <p>
+                            <b>What are you studying?</b><br>
+                            I'm a fourth-year student majoring in Environmental Engineering!
+                        </p>
+                        <p>
+                            <b>How did you become interested in computer science?</b><br>
+                            I started coding my freshman year of college; I took my first computer science class and loved it!
+                        </p>
+                        <p>
+                            <b>What's something cool you've done with computer science?</b><br>
+                            I have created a few digital art pieces with computer code; my favorites are interactive projections.
+                        </p>
+                        <p>
+                            <b>What are you hoping to do with computer science in the future?</b><br>
+                            I hope to further explore computer programming as a tool for digital art.
+                        </p>
+                        <p>
+                            <b>What advice do you have for our students?</b><br>
+                            Explore as many options as you can; you never know what you might fall in love with!
+                        </p>
+                    </div>
+                    <div class="col-md-4" align="left"> <!-- Joao -->
+                        <p>
+                            <b>What are you studying?</b><br>
+                            I'm a third-year student majoring in Computer Science!
+                        </p>
+                        <p>
+                            <b>How did you become interested in computer science?</b><br>
+                            I want to work in game design, and computer science is a path to achieve my objective.
+                        </p>
+                        <p>
+                            <b>What's something cool you've done with computer science?</b><br>
+                            I created a simple pong game and wrote code to move a simple robot!
+                        </p>
+                        <p>
+                            <b>What are you hoping to do with computer science in the future?</b><br>
+                            I hope to work in the video game industry.
+                        </p>
+                        <p>
+                            <b>What advice do you have for our students?</b><br>
+                            Don't give up, and always seek help on difficult tasks!
+                        </p>
+                    </div>
+                    <div class="col-md-4" align="left"> <!-- Jessika -->
+                        <p>
+                            <b>What are you studying?</b><br>
+                            I'm a second-year student majoring in Mathematics!
+                        </p>
+                        <p>
+                            <b>How did you become interested in computer science?</b><br>
+                            I took a class in high school and it became interesting.
+                        </p>
+                        <p>
+                            <b>What's something cool you've done with computer science?</b><br>
+                            For a final project, I created a little game!
+                        </p>
+                        <p>
+                            <b>What are you hoping to do with computer science in the future?</b><br>
+                            In the future, I am hoping to teach the same coding class that inspired me to high school students. 
+                        </p>
+                        <p>
+                            <b>What advice do you have for our students?</b><br>
+                            Do not be afraid of failure or making mistakes because they help us learn.
+                        </p>
+                    </div>
+                </div><br>
+            </div>
+            <p>
+                Cheers to Fall Weather, Technovators! We'll see you at Week 5 on Saturday&mdash;
+            </p>
+            <p>
+                -The Technovation Team
+            </p>
+        </div>
+
+        </div>
+    </section> <!-- end Week 4 section -->
+
     <section class="news bg-light-gray">  <!-- begin Week 3 section -->
         <div class="container">
             <h2>Week 3</h2>
