--- a/technovation/Fall2022/news.html
+++ b/technovation/Fall2022/news.html
@@ -266,7 +266,7 @@
 
             <h4 class="text-center">Meeting Recap</h4>
             <p>
-                <b>In-Person Cohort</b>> opened this week's meeting with a classic, icebreaker: discovering commonalities! Students courageously engaged in conversation and got to know their fellow peers.
+                <b>In-Person Cohort</b> opened this week's meeting with a classic, icebreaker: discovering commonalities! Students courageously engaged in conversation and got to know their fellow peers.
             </p>
             <p>
                <b>Virtual Cohorts</b> opened this week's meeting with a spotlight video on gaming! It was so neat to see how fascinated the students were by learning about the gaming industry and computer science!
@@ -274,7 +274,7 @@
             <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
                 <div class="row">
                     <div class="col-md-12" align="middle">
-                        <iframe width="728" height="548" src="https://www.youtube.com/embed/watch?v=sgbRUB0pt4c&t=1s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe width="728" height="548" src="https://www.youtube.com/embed/sgbRUB0pt4c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
                 <br>
@@ -323,95 +323,82 @@
 
             <h4 class="text-center">Mentor Spotlight</h4>
             <p>
-                Technovation is led, organized, and run by MSU students under the guidance of faculty advisors from MSU and Ford&mdash;this week, we'd like to introduce our In-Person Cohort mentors!
+                Technovation is led, organized, and run by MSU students under the guidance of faculty advisors from MSU and Ford&mdash;this week, we'd like to introduce our In-Person Cohort mentors, Sania, Thuy, Tatiana and Lemuel!
             </p>
 
             <!------------------------------------------>
 
             <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
                 <div class="row">
-                    <div class="col-md-4" align="middle"> <!-- Hadeel -->
-                        <img class="shadow-lg" src="assets/img/photos/HadeelRass750x1000_72R.jpeg" width=70%>
+                    <div class="col-md-4" align="middle"> <!-- Sania -->
+                        <img class="shadow-lg" src="assets/img/photos/sania.jfif" width=70%>
                         <br><br>
-                        <p><i>Hadeel Rass (Detroit Mentor)</i></p>
+                        <p><i>Sania Sinha (In-Person Mentor)</i></p>
                     </div>
-                    <div class="col-md-4" align="middle"> <!-- Joao -->
-                        <img class="shadow-lg" src="assets/img/photos/joaoVitor750x1000_72R.jpeg" width=70%>
+                    <div class="col-md-4" align="middle"> <!-- Thuy -->
+                        <img class="shadow-lg" src="assets/img/photos/Thuy_Nguyen.jpg" width=70%>
                         <br><br>
-                        <p><i>Joao Vitor Oliveira Batista (Lansing Mentor)</i></p>
+                        <p><i>Thuy Nguyen (In-Person Mentor)</i></p>
                     </div>
-                    <div class="col-md-4" align="middle"> <!-- Jessika -->
-                        <img class="shadow-lg" src="assets/img/photos/JessikaHernandez750x1000.jpg" width=70%>
+                    <div class="col-md-4" align="middle"> <!-- Tatiana -->
+                        <img class="shadow-lg" src="assets/img/photos/tatiana.jpg" width=70%>
                         <br><br>
-                        <p><i>Jessika Hernández (All Michigan Mentor)</i></p>
+                        <p><i>Tatiana Voegerl(In-Person Mentor)</i></p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4" align="left"> <!-- Hadeel -->
+                    <div class="col-md-4" align="left"> <!-- Sania -->
                         <p>
                             <b>What are you studying?</b><br>
-                            I'm a fourth-year student majoring in Environmental Engineering!
+                            I'm a second year majoring in Computer Science and minoring in Math, Data Science, CMSE
                         </p>
                         <p>
                             <b>How did you become interested in computer science?</b><br>
-                            I started coding my freshman year of college; I took my first computer science class and loved it!
-                        </p>
+                            I started making websites in middle school and absolutely loved it.                        </p>
                         <p>
                             <b>What's something cool you've done with computer science?</b><br>
-                            I have created a few digital art pieces with computer code; my favorites are interactive projections.
-                        </p>
+                            Some friends and I built a small camera connected to an audio device that can read text and dictate it for blind people!                        </p>
                         <p>
                             <b>What are you hoping to do with computer science in the future?</b><br>
-                            I hope to further explore computer programming as a tool for digital art.
-                        </p>
+                            I am working on compositional learning, which is like teaching common sense to a machine, and hope to publish a paper by the end of this school year :)                        </p>
                         <p>
                             <b>What advice do you have for our students?</b><br>
-                            Explore as many options as you can; you never know what you might fall in love with!
-                        </p>
+                            Don't be afraid to try new things- it might just become your thing!                        </p>
                     </div>
-                    <div class="col-md-4" align="left"> <!-- Joao -->
+                    <div class="col-md-4" align="left"> <!-- Thuy -->
                         <p>
                             <b>What are you studying?</b><br>
-                            I'm a third-year student majoring in Computer Science!
+                            I'm a first-year student majoring in Computer Science!
                         </p>
                         <p>
                             <b>How did you become interested in computer science?</b><br>
-                            I want to work in game design, and computer science is a path to achieve my objective.
-                        </p>
+                            I saw my dad (as a researcher) writes codes all day long!                        </p>
                         <p>
                             <b>What's something cool you've done with computer science?</b><br>
-                            I created a simple pong game and wrote code to move a simple robot!
-                        </p>
+                            I did a simple prediction model using Arduino!                        </p>
                         <p>
                             <b>What are you hoping to do with computer science in the future?</b><br>
-                            I hope to work in the video game industry.
-                        </p>
+                            I would like to use code and algorithms to solve issues in mental healthcare.                        </p>
                         <p>
                             <b>What advice do you have for our students?</b><br>
-                            Don't give up, and always seek help on difficult tasks!
-                        </p>
+                            Some days would be longer than usual when you're trying to code but the results are not satisfying, Be patient and don't give up!                        </p>
                     </div>
-                    <div class="col-md-4" align="left"> <!-- Jessika -->
+                    <div class="col-md-4" align="left"> <!-- Tatiana -->
                         <p>
                             <b>What are you studying?</b><br>
-                            I'm a second-year student majoring in Mathematics!
-                        </p>
+                            I am a third year double major in Computer Science and Information Science                        </p>
                         <p>
                             <b>How did you become interested in computer science?</b><br>
-                            I took a class in high school and it became interesting.
-                        </p>
+                            I took a coding class in high school and fell in love with solving problems with code!                        </p>
                         <p>
                             <b>What's something cool you've done with computer science?</b><br>
-                            For a final project, I created a little game!
-                        </p>
+                            I've helped code artificial intelligence that can play multiple different games.                        </p>
                         <p>
                             <b>What are you hoping to do with computer science in the future?</b><br>
-                            In the future, I am hoping to teach the same coding class that inspired me to high school students. 
-                        </p>
+                            In the future, I'd like to inspire more young coders to pursue computer science and help create a welcoming environment in the industry.                        </p>
                         <p>
                             <b>What advice do you have for our students?</b><br>
-                            Do not be afraid of failure or making mistakes because they help us learn.
-                        </p>
+                            Don't be afraid to try something new; even if you don't succeed you can learn a lot!                        </p>
                     </div>
                 </div><br>
             </div>
