--- a/technovation/Fall2022/news.html
+++ b/technovation/Fall2022/news.html
@@ -323,7 +323,7 @@
 
             <h4 class="text-center">Mentor Spotlight</h4>
             <p>
-                Technovation is led, organized, and run by MSU students under the guidance of faculty advisors from MSU and Ford&mdash;this week, we'd like to introduce our In-Person Cohort mentors, Sania, Thuy, Tatiana and Lemuel!
+                Technovation is led, organized, and run by MSU students under the guidance of faculty advisors from MSU and Ford&mdash;this week, we'd like to introduce our In-Person Cohort mentors, Sania, Thuy and Tatiana!
             </p>
 
             <!------------------------------------------>
